[tool.poetry]
name = "clean-up-vcf"
version = "0.1.0"
description = "A script to remove unnecessary INFO fields from a VCF file."
authors = ["Your Name <kvolque@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.scripts]
clean-up-vcf = "clean_up_vcf:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
